added thymeleaf and css to home page

--- a/src/main/resources/templates/index/home.html
+++ b/src/main/resources/templates/index/home.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Free&Need</title>
+    <link rel="stylesheet" href="/css/home.css">
 </head>
 <body>
 
-<nav style="background-color: #F0F5F9">
+<nav style="background-color: #afacac">
     <div class="container-fluid backdrop">
         <div class="menu">
             <div class="tab-menu">
@@ -18,7 +19,21 @@
     </div>
 </nav>
 
+<div class="card main-body">
+    <!--Title-->
+    <div class="card title-card">
+        <h1>Home Page</h1>
+    </div>
+    <!--text field-->
 
-<h1>Home Page</h1>
+        <div class="card text-card">
+            <p>cjndfow wdsjfnowdfm ndsoxdnkfcmks enwofnkwe wsnfnw wskodfno oweknfoned ewbnfonw wonfon wjnwwd k enwssonf deknc ksnwocvnw swnvoweobve sdjvnoen ekdrvbone kndsondfdn dkjndosnv nownsd nwonfc eonvone oinbnvc webnfcfow ownv wow onc eb eo eb v eoe beoiveov ownovnew o n oe eovo oenovnev eonvon oennv oem r r envone oenv r oe vkone eonvon eofjv ev veonvnoe oenvo veonvo3n voenveonj erfr fj fvn rrvneo fj.</p>
+        </div>
+        <!--Image Scroller-->
+        <div class="card image-card">
+            <img src="/img/hands.png">
+        </div>
+
+</div>
 </body>
 </html>
