added some stuff

--- a/src/main/resources/templates/index/NeedPosts.html
+++ b/src/main/resources/templates/index/NeedPosts.html
@@ -25,6 +25,15 @@
 
 <h1>Need Posts</h1>
 
+<form th:method="POST" th:action="@{/Needs}">
+    <label for="post"></label>
+    <input class="postNeed" type="text" id="post" th:field="*{title}">
+
+    <div class="submit-div">
+        <button class="submit-post" id="post-submission">Post</button>
+    </div>
+</form>
+
 <div style="display: flex; justify-content: center">
     <div th:each="posts : ${post}" class="card" style="width: 500px; background-color: #d38140; display: flex; justify-content: center; text-align: center;">
         <div class="card-body">
