added new pages and made them linkable as well as giving user security access if signed in to the pages.

--- a/src/main/resources/templates/index/FreePosts.html
+++ b/src/main/resources/templates/index/FreePosts.html
@@ -20,6 +20,7 @@
     </div>
 </nav>
 <h1>Free Posts</h1>
+<a th:href="@{/Create/Free}">Create Free Post</a>
 <div style="display: flex; justify-content: center">
 <div th:each="posts : ${post}" class="card" style="width: 500px; background-color: #d38140; display: flex; justify-content: center; text-align: center;">
 <div class="card-body">
