--- a/src/main/resources/templates/index/NeedPosts.html
+++ b/src/main/resources/templates/index/NeedPosts.html
@@ -25,7 +25,7 @@
 
 <h1>Need Posts</h1>
 
-<a th:href="@{/}">Create Need Post</a>
+<a th:href="@{/Create/Need}">Create Need Post</a>
 
 <div style="display: flex; justify-content: center">
     <div th:each="posts : ${post}" class="card" style="width: 500px; background-color: #d38140; display: flex; justify-content: center; text-align: center;">
