--- a/src/main/resources/templates/index/createNeed.html
+++ b/src/main/resources/templates/index/createNeed.html
@@ -5,13 +5,14 @@
     <title>Create Need Post</title>
 </head>
 <body>
-<form th:method="POST" th:action="@{/Needs}" th:object="${post}">
-  <label for="post"></label>
-  <input class="postNeed" type="text" id="post" th:field="*{title}">
+<h1>Create A Post For Needing Something</h1>
+<!--<form th:method="POST" th:action="@{/Needs}" th:object="${post}">-->
+<!--  <label for="post"></label>-->
+<!--  <input class="postNeed" type="text" id="post" th:field="*{title}">-->
 
-  <div class="submit-div">
-    <button class="submit-post" type="submit" id="post-submission">Post</button>
-  </div>
-</form>
+<!--  <div class="submit-div">-->
+<!--    <button class="submit-post" type="submit" id="post-submission">Post</button>-->
+<!--  </div>-->
+<!--</form>-->
 </body>
 </html>
